<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/brock"
    tools:context=".GameActivity">

    <TextView
        android:id="@+id/tv_game"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="Game"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/im_image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="30dp"
        android:background="@color/white"
        android:src="@drawable/ic_launcher_foreground"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_game" />

    <LinearLayout
        android:id="@+id/layout_one"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/im_image">

        <Button
            android:id="@+id/btn_image1"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:text="@string/image_1"
            android:onClick="changeImage"
            android:layout_height="wrap_content"
          />

        <Button
            android:id="@+id/btn_image2"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:text="@string/image_2"
            android:onClick="changeImage"
            android:layout_height="wrap_content"
           />

        <Button
            android:id="@+id/btn_image3"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:text="@string/image_3"
            android:onClick="changeImage"
            android:layout_height="wrap_content"
           />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_one">

        <Button
            android:id="@+id/btn_one"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:text="@string/ilon"
            android:layout_height="wrap_content"
            />

        <Button
            android:id="@+id/btn_two"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:text="@string/mark" />

        <Button
            android:id="@+id/btn_three"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:text="@string/bezos" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>